logs/param/build.make.001.log
Scanning dependencies of target pubvel_spiral
[ 33%] Built target pubvel_with_max
[ 50%] Building CXX object CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o
[ 83%] Built target set_bg_color
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:9:31: error: ‘nullptr’ was not declared in this scope
 std::time_t start = std::time(nullptr);
                               ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:24:31: error: ‘nullptr’ was not declared in this scope
   std::time_t end = std::time(nullptr);
                               ^
/home/ros-industrial/HW8/src/param/src/pubvel_spiral.cpp:33:25: error: ‘pi’ was not declared in this scope
       msg.angular.z = x*pi/8;
                         ^
CMakeFiles/pubvel_spiral.dir/build.make:62: recipe for target 'CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o' failed
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/pubvel_spiral.dir/all' failed
Makefile:138: recipe for target 'all' failed
make[2]: *** [CMakeFiles/pubvel_spiral.dir/src/pubvel_spiral.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_spiral.dir/all] Error 2
make: *** [all] Error 2
